@@ -4,6 +4,8 @@ Version 5.0.8
     directly from the network stream.  Under certain situations, two bytes were being left unread
     and this messed up our byte counts.  Now we are using a WeakReference to an internal buffer
     that we read the compressed data into before inflating. (Bug #28204)  
+  - Fixed problem where we were not closing prepared statement handles
+    when commands are disposed.
   
 Version 5.0.7 5/16/2007
 
